// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Interpreter callFunction() should map errors returned in objects 1`] = `
"Error: My Error
    at myFunc (myFunc:2:17)"
`;

exports[`Interpreter callFunction() should support errors from functions returned by the function 1`] = `
"Error: my error
    at <anonymous> (myFunc:2:27)"
`;

exports[`Interpreter callFunction() should throw errors that are thrown from the function 1`] = `
"Error: My Error
    at myFunc (myFunc:2:7)"
`;

exports[`Interpreter copyToValue() should support Error objects 1`] = `"Error: error message"`;

exports[`Interpreter copyToValue() should support EvalError objects 1`] = `"EvalError: error message"`;

exports[`Interpreter copyToValue() should support RangeError objects 1`] = `"RangeError: error message"`;

exports[`Interpreter copyToValue() should support ReferenceError objects 1`] = `"ReferenceError: error message"`;

exports[`Interpreter copyToValue() should support SyntaxError objects 1`] = `"SyntaxError: error message"`;

exports[`Interpreter copyToValue() should support SyntaxError objects 2`] = `"SyntaxError: error message"`;

exports[`Interpreter copyToValue() should support TypeError objects 1`] = `"SyntaxError: error message"`;

exports[`Interpreter copyToValue() should support URIError objects 1`] = `"URIError: error message"`;

exports[`Interpreter proxyObject() should support functions that re-throw errors from nested functions 1`] = `
Completion {
  "Target": undefined,
  "Type": "normal",
  "Value": StringValue {
    "string": "Error: test message
    at myFunc (myFunc:2:7)
    at func (native)",
  },
}
`;

exports[`Interpreter proxyObject() should support functions that throw errors 1`] = `
Completion {
  "Target": undefined,
  "Type": "normal",
  "Value": StringValue {
    "string": "Error: test message
    at func (native)",
  },
}
`;

exports[`Interpreter reverseProxyObject() should support functions that throw errors 1`] = `
"Error: test message
    at func (func:2:7)"
`;

exports[`traverse() should be able to iterate over a program 1`] = `
Array [
  "Script",
  "  ScriptBody",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        NumericLiteral",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        BooleanLiteral",
  "    VariableStatement",
  "      VariableDeclaration",
  "        BindingIdentifier",
  "        NumericLiteral",
  "    ExpressionStatement",
  "      AssignmentExpression",
  "        MemberExpression",
  "          ThisExpression",
  "          IdentifierName",
  "        BooleanLiteral",
  "    IfStatement",
  "      BooleanLiteral",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "            IdentifierReference",
  "    SwitchStatement",
  "      StringLiteral",
  "      CaseBlock",
  "        CaseClause",
  "          StringLiteral",
  "          ExpressionStatement",
  "            AssignmentExpression",
  "              IdentifierReference",
  "              NumericLiteral",
  "          BreakStatement",
  "        CaseClause",
  "          StringLiteral",
  "          ExpressionStatement",
  "            AssignmentExpression",
  "              IdentifierReference",
  "              NumericLiteral",
  "          BreakStatement",
  "        DefaultClause",
  "    ForStatement",
  "      VariableDeclaration",
  "        BindingIdentifier",
  "        NumericLiteral",
  "      RelationalExpression",
  "        IdentifierReference",
  "        NumericLiteral",
  "      UpdateExpression",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "    ForOfStatement",
  "      ForDeclaration",
  "        ForBinding",
  "          BindingIdentifier",
  "      IdentifierReference",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "    ForInStatement",
  "      ForDeclaration",
  "        ForBinding",
  "          BindingIdentifier",
  "      IdentifierReference",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "    WhileStatement",
  "      RelationalExpression",
  "        IdentifierReference",
  "        NumericLiteral",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "    DoWhileStatement",
  "      EqualityExpression",
  "        IdentifierReference",
  "        NumericLiteral",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "    TryStatement",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "      Catch",
  "        BindingIdentifier",
  "        Block",
  "          ExpressionStatement",
  "            CallExpression",
  "              IdentifierReference",
  "      Block",
  "        ExpressionStatement",
  "          AssignmentExpression",
  "            IdentifierReference",
  "            BooleanLiteral",
  "    TryStatement",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "      Catch",
  "        BindingIdentifier",
  "        Block",
  "    FunctionDeclaration",
  "      BindingIdentifier",
  "      SingleNameBinding",
  "        BindingIdentifier",
  "      SingleNameBinding",
  "        BindingIdentifier",
  "      FunctionBody",
  "        ReturnStatement",
  "          AdditiveExpression",
  "            IdentifierReference",
  "            IdentifierReference",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ArrowFunction",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          ConciseBody",
  "            ExpressionBody",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ArrowFunction",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          FunctionBody",
  "            ReturnStatement",
  "              AdditiveExpression",
  "                IdentifierReference",
  "                IdentifierReference",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ArrowFunction",
  "          BindingElement",
  "            ObjectBindingPattern",
  "              SingleNameBinding",
  "                BindingIdentifier",
  "              SingleNameBinding",
  "                BindingIdentifier",
  "          BindingElement",
  "            ObjectBindingPattern",
  "              SingleNameBinding",
  "                BindingIdentifier",
  "              SingleNameBinding",
  "                BindingIdentifier",
  "            ObjectLiteral",
  "              PropertyDefinition",
  "                BooleanLiteral",
  "                IdentifierName",
  "          FunctionBody",
  "            ReturnStatement",
  "              AdditiveExpression",
  "                IdentifierReference",
  "                IdentifierReference",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        ObjectBindingPattern",
  "          BindingProperty",
  "            SingleNameBinding",
  "              BindingIdentifier",
  "            IdentifierName",
  "          BindingProperty",
  "            SingleNameBinding",
  "              BindingIdentifier",
  "            IdentifierName",
  "        IdentifierReference",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ObjectLiteral",
  "          PropertyDefinition",
  "            BooleanLiteral",
  "            IdentifierName",
  "          PropertyDefinition",
  "            IdentifierReference",
  "          PropertyDefinition",
  "            StringLiteral",
  "            IdentifierName",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ArrayLiteral",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        ArrayBindingPattern",
  "          BindingElement",
  "            ObjectBindingPattern",
  "              SingleNameBinding",
  "                BindingIdentifier",
  "              SingleNameBinding",
  "                BindingIdentifier",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "        ArrayLiteral",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        TemplateLiteral",
  "          MultiplicativeExpression",
  "            IdentifierReference",
  "            IdentifierReference",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ConditionalExpression",
  "          BooleanLiteral",
  "          NumericLiteral",
  "          NumericLiteral",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        CoalesceExpression",
  "          CoalesceExpression",
  "            NullLiteral",
  "            IdentifierReference",
  "          NumericLiteral",
  "    AsyncFunctionDeclaration",
  "      BindingIdentifier",
  "      AsyncFunctionBody",
  "        ExpressionStatement",
  "          AwaitExpression",
  "            IdentifierReference",
  "    GeneratorDeclaration",
  "      BindingIdentifier",
  "      GeneratorBody",
  "        ExpressionStatement",
  "          YieldExpression",
  "        ExpressionStatement",
  "          YieldExpression",
  "        ReturnStatement",
  "          StringLiteral",
  "    AsyncGeneratorDeclaration",
  "      BindingIdentifier",
  "      AsyncGeneratorBody",
  "        ExpressionStatement",
  "          YieldExpression",
  "        ExpressionStatement",
  "          AwaitExpression",
  "            IdentifierReference",
  "        ExpressionStatement",
  "          YieldExpression",
  "        ReturnStatement",
  "          StringLiteral",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ParenthesizedExpression",
  "          AsyncArrowFunction",
  "            AsyncFunctionBody",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ParenthesizedExpression",
  "          AsyncArrowFunction",
  "            AsyncConciseBody",
  "    ClassDeclaration",
  "      BindingIdentifier",
  "      ClassTail",
  "        FieldDefinition",
  "          IdentifierName",
  "          NumericLiteral",
  "        FieldDefinition",
  "          PrivateIdentifier",
  "          NumericLiteral",
  "        MethodDefinition",
  "          IdentifierName",
  "          FunctionBody",
  "            ExpressionStatement",
  "              AssignmentExpression",
  "                MemberExpression",
  "                  ThisExpression",
  "                  IdentifierName",
  "                NumericLiteral",
  "        MethodDefinition",
  "          IdentifierName",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          FunctionBody",
  "        AsyncMethod",
  "          IdentifierName",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          AsyncFunctionBody",
  "        GeneratorMethod",
  "          IdentifierName",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          GeneratorBody",
  "        AsyncGeneratorMethod",
  "          IdentifierName",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          AsyncGeneratorBody",
  "    ClassDeclaration",
  "      BindingIdentifier",
  "      ClassTail",
  "        IdentifierReference",
  "        MethodDefinition",
  "          IdentifierName",
  "          FunctionBody",
  "            ExpressionStatement",
  "              SuperCall",
  "        MethodDefinition",
  "          IdentifierName",
  "          FunctionBody",
  "            ExpressionStatement",
  "              CallExpression",
  "                SuperProperty",
  "                  IdentifierName",
  "                NumericLiteral",
  "                NumericLiteral",
  "    ExpressionStatement",
  "      BitwiseANDExpression",
  "        IdentifierReference",
  "        IdentifierReference",
  "    ExpressionStatement",
  "      BitwiseORExpression",
  "        IdentifierReference",
  "        IdentifierReference",
  "    ExpressionStatement",
  "      BitwiseXORExpression",
  "        IdentifierReference",
  "        IdentifierReference",
  "    ExpressionStatement",
  "      RelationalExpression",
  "        IdentifierReference",
  "        IdentifierReference",
]
`;
